2013-09-12  Eli Zaretskii  <eliz@gnu.org>

	* lisp.mk (lisp): Add w32-common-fns.elc.

2013-09-12  Xue Fuqiao  <xfq.free@gmail.com>

	* charset.c (char_charset): Document an exception for char-charset.

2013-09-12  Dmitry Antipov  <dmantipov@yandex.ru>

	* xterm.h (x_display_info): New field last_user_time...
	* xterm.c (toplevel): ...to replace static last_user_time.
	(handle_one_xevent, x_ewmh_activate_frame): Adjust users.

2013-09-12  Dmitry Antipov  <dmantipov@yandex.ru>

	* xterm.c (x_set_scroll_bar_thumb) [USE_LUCID && !HAVE_XAW3D]: Clip
	scroll bar values to prevent thumb from disappear and update comment.

2013-09-11  Glenn Morris  <rgm@gnu.org>

	* emacs.c (usage_message): Possessive apostrophe tweak.

2013-09-11  Dmitry Antipov  <dmantipov@yandex.ru>

	* nsterm.m (syms_of_nsterm): Use Qns.
	* w32fns.c (Fx_open_connection): Remove old '#if 0' code.
	* w32term.c (w32_create_terminal, syms_of_w32term): Use Qw32.
	* xfns.c (x_display_info_for_name, Fx_open_connection):
	Remove old '#if 0' code.
	(syms_of_xfns): Use Qx.
	* termhooks.h (fullscreen_hook): Remove the leftover.
	(struct terminal): Fix typo in comment.

2013-09-11  Dmitry Antipov  <dmantipov@yandex.ru>

	Cleaning up a few X scroll bar bits.
	* termhooks.h (enum scroll_bar_part): Add scroll_bar_nowhere member.
	* xterm.h (struct scroll_bar) [USE_TOOLKIT_SCROLL_BARS && USE_LUCID]:
	New member last_seen_part, going to replace...
	* xterm.c [USE_TOOLKIT_SCROLL_BARS]: ...global last_scroll_bar_part.
	(xt_action_hook) [USE_LUCID]: Adjust user.
	(xm_scroll_callback, xg_scroll_callback): Do not bloat with
	Lucid-specific scroll bar support.
	(xaw_jump_callback, xaw_scroll_callback): Prefer enum scroll_par_part
	to int and adjust to use last_seen_part member.
	(x_set_toolkit_scroll_bar_thumb) [USE_LUCID]: Adjust user.
	(x_scroll_bar_create) [USE_TOOLKIT_SCROLL_BARS && USE_LUCID]:
	Initialize last_seen_part.

2013-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>
